tests/compile-fail/fs/unix_open_too_many_args.stderr
error: Undefined Behavior: incorrect number of arguments for `open`: got 4, expected 2 or 3
  --> $DIR/unix_open_too_many_args.rs:15:24
   |
LL |     let _fd = unsafe { libc::open(name_ptr, libc::O_RDONLY, 0, 0) }; //~ ERROR Undefined Behavior: incorrect number of arguments for `ope...
   |                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ incorrect number of arguments for `open`: got 4, expected 2 or 3
   |
   = help: this indicates a bug in the program: it performed an invalid operation, and caused Undefined Behavior
   = help: see https://doc.rust-lang.org/nightly/reference/behavior-considered-undefined.html for further information
           
   = note: inside `test_open_too_many_args` at $DIR/unix_open_too_many_args.rs:15:24
note: inside `main` at $DIR/unix_open_too_many_args.rs:9:5
  --> $DIR/unix_open_too_many_args.rs:9:5
   |
LL |     test_open_too_many_args();
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^

note: some details are omitted, run with `MIRIFLAGS=-Zmiri-backtrace=full` for a verbose backtrace

error: aborting due to previous error

